Refactor architecture to adopt LCEL-based structure with dependency injection. Introduce three main architecture options: Agent-based, LCEL-based, and Hybrid. Enhance maintainability and scalability by integrating existing Company_Data components into a unified pipeline. Update documentation to reflect new architecture, integration strategies, and migration guidelines.

--- a/프로젝트_통합_방안.md
+++ b/프로젝트_통합_방안.md
@@ -23,50 +23,364 @@
 
 ## 2. 통합 아키텍처 설계
 
-### 2.1 기본 아키텍처: Agent 기반 (Company_Data_5)
+### 2.1 아키텍처 옵션 비교
 
-**선택 이유**:
-- 가장 확장 가능하고 유지보수가 용이한 구조
+통합 프로젝트를 위한 세 가지 주요 아키텍처 옵션이 있습니다:
+
+#### 옵션 A: Agent 기반 (Company_Data_5) - Function-calling
+#### 옵션 B: LCEL 기반 (LangChain Expression Language) - Runnable 파이프라인
+#### 옵션 C: 하이브리드 (LCEL + Agent)
+
+### 2.1.1 옵션 A: Agent 기반 (Company_Data_5)
+
+**특징**:
 - Function-calling 기반 표준화된 인터페이스
 - 에이전트 레지스트리 시스템으로 자동 관리
 - 워크플로우 엔진으로 복잡한 프로세스 처리 가능
+- 각 에이전트가 독립적으로 동작
 
-### 2.2 통합된 에이전트 구조
+**장점**:
+- ✅ 복잡한 의사결정 및 분기 처리에 적합
+- ✅ 에이전트 간 명확한 책임 분리
+- ✅ 확장 가능한 구조 (새로운 에이전트 추가 용이)
+- ✅ Function-calling으로 타입 안정성 확보
+
+**단점**:
+- ❌ 상대적으로 복잡한 구조
+- ❌ 순차적 파이프라인에는 과도할 수 있음
+- ❌ LangChain 생태계와의 직접적 통합 제한적
+
+### 2.1.2 옵션 B: LCEL 기반 (LangChain Expression Language)
+
+**특징**:
+- Runnable 인터페이스로 모든 컴포넌트 통일
+- 파이프 연산자(`|`)를 사용한 직관적인 체인 구성
+- LangChain 생태계와 완벽한 통합
+- 스트리밍 및 비동기 지원
+
+**장점**:
+- ✅ **직관적인 구문**: 파이프 연산자로 체인 구성이 매우 간결
+  ```python
+  chain = prompt | llm | parser
+  ```
+- ✅ **LangChain 생태계 통합**: 모든 LangChain 컴포넌트와 자연스럽게 통합
+- ✅ **스트리밍 지원**: 실시간 결과 스트리밍 가능
+- ✅ **비동기 지원**: `ainvoke()`로 비동기 실행
+- ✅ **병렬 실행**: `RunnableParallel`로 병렬 처리 용이
+- ✅ **타입 안정성**: Runnable 인터페이스로 타입 추론 가능
+- ✅ **디버깅 용이**: 각 단계별 입력/출력 추적 가능
+- ✅ **Company_Data와의 자연스러운 통합**: 기존 Chain 코드를 LCEL로 쉽게 변환
+
+**단점**:
+- ❌ 복잡한 분기/반복 로직에는 LangGraph 필요
+- ⚠️ Agent와 Tool calling은 지원하지만, LCEL 체인 내에서 직접 사용하려면 Runnable로 래핑 필요
+
+**LCEL 예시 코드**:
+```python
+from langchain_core.prompts import ChatPromptTemplate
+from langchain_core.output_parsers import StrOutputParser
+from langchain_openai import ChatOpenAI
+from langchain_core.runnables import RunnableParallel, RunnableLambda
+
+# 기본 체인
+prompt = ChatPromptTemplate.from_template("기업 {company_name}에 대해 분석해주세요.")
+llm = ChatOpenAI(model="gpt-4o-mini")
+parser = StrOutputParser()
+
+chain = prompt | llm | parser
+
+# 병렬 실행
+parallel_chain = RunnableParallel({
+    "basic_info": basic_info_chain,
+    "search_results": search_chain,
+    "rag_results": rag_chain,
+})
+
+# 조건부 분기
+def route_input(input_data):
+    if input_data.get("use_rag"):
+        return rag_chain
+    else:
+        return web_search_chain
+
+routing_chain = RunnableLambda(route_input) | chain
+```
+
+### 2.1.3 옵션 C: 하이브리드 (LCEL + Agent)
+
+**특징**:
+- LCEL로 파이프라인 구성, Agent로 복잡한 의사결정 처리
+- LCEL 체인을 Agent Tool로 래핑
+- Agent를 LCEL 체인 내에서 Runnable로 사용
+- **LCEL에서 Agent와 Tool calling 완벽 지원**
+
+**장점**:
+- ✅ LCEL의 간결함 + Agent의 유연성
+- ✅ 단순한 파이프라인은 LCEL, 복잡한 로직은 Agent
+- ✅ Agent와 Tool calling을 LCEL 체인에 직접 통합 가능
+- ✅ 최적의 조합
+
+**LCEL에서 Agent 사용 예시**:
+```python
+from langchain.agents import create_openai_tools_agent, AgentExecutor
+from langchain_core.tools import tool
+from langchain_core.runnables import RunnableLambda
+
+# Tool 정의
+@tool
+def search_company(company_name: str) -> str:
+    """기업 정보를 검색합니다."""
+    return f"{company_name} 정보"
+
+# Agent 생성
+agent = create_openai_tools_agent(llm, [search_company], prompt)
+agent_executor = AgentExecutor(agent=agent, tools=[search_company])
+
+# LCEL 체인에 Agent 통합 (AgentExecutor는 이미 Runnable)
+pipeline = (
+    RunnableLambda(prepare_input)
+    | agent_executor  # Agent를 직접 사용 (Runnable이므로)
+    | process_result
+)
+```
+
+**구조 예시**:
+```python
+# LCEL로 파이프라인 구성
+pipeline = (
+    RunnableLambda(prepare_input)
+    | RunnableParallel({
+        "basic_info": basic_info_agent_executor,  # AgentExecutor는 Runnable
+        "search": search_chain,
+    })
+    | RunnableLambda(combine_results)
+    | insight_agent_executor  # Agent 직접 사용
+    | report_chain
+)
+```
+
+### 2.1.4 아키텍처 선택 권장사항
+
+**추천: 옵션 B (LCEL 기반) 또는 옵션 C (하이브리드)**
+
+**선택 이유**:
+1. **Company_Data와의 자연스러운 통합**: 기존 Chain 코드를 LCEL로 쉽게 변환 가능
+2. **LangChain 생태계 활용**: RAG, 검색, 파싱 등 모든 LangChain 컴포넌트 활용
+3. **간결한 코드**: 파이프 연산자로 복잡한 파이프라인을 간단하게 표현
+4. **스트리밍 지원**: 실시간 결과 제공 가능
+5. **유연성**: 필요시 Agent를 Runnable로 통합 가능
+
+**하이브리드 접근**:
+- 기본 파이프라인: LCEL로 구성 (간결하고 직관적)
+- 복잡한 의사결정: Agent 사용 (Tool calling 필요 시)
+- **AgentExecutor는 이미 Runnable이므로 LCEL 체인에 직접 사용 가능**
+- Tool calling을 포함한 Agent를 LCEL 파이프라인에 자연스럽게 통합
+
+### 2.2 기본 아키텍처: LCEL 기반 (권장)
+
+**선택 이유**:
+- LangChain 생태계와 완벽한 통합
+- Company_Data의 기존 Chain 코드를 자연스럽게 통합 가능
+- 파이프 연산자로 직관적이고 간결한 코드
+- 스트리밍 및 비동기 지원
+- 필요시 Agent를 Runnable로 통합 가능
+
+### 2.2 통합된 하이브리드 구조 (LCEL + Agent + DI)
+
+**아키텍처 결정**: 하이브리드 방식 + DI 패턴
 
 ```
 통합 프로젝트/
 ├── src/
-│   ├── agents/
-│   │   ├── main/                    # Main Agent (Company_Data_5 기반)
-│   │   ├── basic_info/              # Basic Info Agent (Company_Data_5 기반)
-│   │   ├── planner/                 # Search Planning Agent (Company_Data_5 기반)
-│   │   ├── search/                  # Search Agents
-│   │   │   ├── search_rag_agent.py  # SAR (Company_Data_5 기반)
-│   │   │   ├── search_web_agent.py  # SAW (Company_Data_5 기반)
-│   │   │   └── search_tavily_agent.py # Tavily 검색 (Company_Data 통합)
-│   │   ├── insight/                 # Make Insight Agent (Company_Data_5 기반)
-│   │   └── report/                  # Make Report Agent (Company_Data_5 기반)
+│   ├── chains/                      # LCEL 기반 체인 (기본)
+│   │   ├── basic_info/             # 기초 정보 수집 체인
+│   │   ├── search/                  # 검색 체인
+│   │   │   ├── rag_search_chain.py # RAG 검색 체인
+│   │   │   ├── web_search_chain.py # 웹 검색 체인 (DuckDuckGo)
+│   │   │   └── tavily_search_chain.py # Tavily 검색 체인
+│   │   ├── planner/                 # 검색 전략 계획 체인
+│   │   ├── insight/                # 인사이트 생성 체인
+│   │   └── report/                  # 보고서 생성 체인
+│   ├── agents/                      # Agent (복잡한 로직용, 선택적)
+│   │   ├── complex_decision/       # 복잡한 의사결정 Agent
+│   │   └── workflow/               # 워크플로우 오케스트레이션 Agent
 │   ├── rag/                         # RAG 시스템 (Company_Data_5 기반)
-│   ├── chains/                      # LangChain Chain (Company_Data 호환 레이어)
+│   │   ├── etl/                     # ETL 파이프라인
+│   │   ├── routing/                 # 라우팅 엔진
+│   │   └── search/                  # 검색 엔진 (Runnable로 통합)
+│   ├── tools/                       # Runnable Tool (LCEL에서 사용)
+│   │   ├── dart_tools.py
+│   │   ├── search_tools.py
+│   │   └── rag_tools.py
+│   ├── di/                          # DI 컨테이너 및 설정
+│   │   ├── __init__.py
+│   │   ├── container.py            # DI 컨테이너 정의
+│   │   ├── providers.py             # 의존성 프로바이더
+│   │   └── wiring.py                # 의존성 주입 설정
 │   ├── modules/                     # 모듈 기반 레거시 지원 (Company_Data_3 호환)
+│   │   └── adapters/               # Runnable 어댑터
 │   └── shared/                      # 공통 모듈
+│       ├── runnables/               # 공통 Runnable 컴포넌트
+│       ├── models/                  # 데이터 모델
+│       ├── interfaces/              # 인터페이스 정의 (DI용)
+│       └── utils/                   # 유틸리티
 ```
 
-### 2.3 아키텍처 통합 전략
+### 2.3 LCEL 기반 통합 전략
 
-#### 2.3.1 Agent 기반 (기본)
-- **Company_Data_5의 Agent 구조를 기본으로 사용**
-- 모든 새로운 기능은 Agent로 구현
+#### 2.4.1 LCEL 체인 구성 (기본, DI 적용)
+- **Company_Data의 Chain을 LCEL로 자연스럽게 변환**
+- 파이프 연산자로 직관적인 파이프라인 구성
+- Runnable 인터페이스로 모든 컴포넌트 통일
+- **DI를 통해 의존성 주입**
 
-#### 2.3.2 Chain 호환 레이어 (레거시 지원)
-- **Company_Data의 Chain 구조를 Agent로 래핑**
-- 기존 Chain 코드를 Agent 내부에서 호출 가능하도록 어댑터 제공
-- 점진적 마이그레이션 지원
+**예시: 5단계 파이프라인을 LCEL로 구성**
+```python
+from langchain_core.runnables import RunnableParallel, RunnableLambda
+from langchain_core.prompts import ChatPromptTemplate
+from langchain_openai import ChatOpenAI
+
+# 1단계: 기초 정보 수집
+basic_info_chain = (
+    basic_info_prompt
+    | llm
+    | basic_info_parser
+)
+
+# 2단계: 검색 전략 계획
+search_plan_chain = (
+    search_plan_prompt
+    | llm
+    | search_plan_parser
+)
+
+# 3단계: 병렬 검색 (RAG + 웹)
+search_chain = RunnableParallel({
+    "rag_results": rag_retriever | rag_chain,
+    "web_results": web_search_tool | web_chain,
+})
+
+# 4단계: 인사이트 생성
+insight_chain = (
+    insight_prompt
+    | llm
+    | insight_parser
+)
+
+# 5단계: 보고서 생성
+report_chain = (
+    report_prompt
+    | llm
+    | report_parser
+)
+
+# 전체 파이프라인
+pipeline = (
+    RunnableLambda(prepare_input)
+    | basic_info_chain
+    | RunnableLambda(save_stage1)
+    | search_plan_chain
+    | RunnableLambda(save_stage2)
+    | search_chain
+    | RunnableLambda(save_stage3)
+    | insight_chain
+    | RunnableLambda(save_stage4)
+    | report_chain
+    | RunnableLambda(save_final)
+)
+```
+
+#### 2.3.2 Agent 통합 (필요시)
+- **복잡한 의사결정이 필요한 경우에만 Agent 사용**
+- Agent를 Runnable로 래핑하여 LCEL 체인에 통합
+- Function-calling이 필요한 경우 Agent 활용
+
+**예시: Agent를 LCEL 체인에 통합**
+```python
+from langchain_core.runnables import RunnableLambda
+
+# Agent를 Runnable로 변환
+def agent_as_runnable(agent, input_key="input"):
+    def run_agent(data):
+        result = agent.invoke(data[input_key])
+        return {**data, "agent_result": result}
+    return RunnableLambda(run_agent)
+
+# LCEL 체인에 Agent 통합
+pipeline = (
+    basic_info_chain
+    | agent_as_runnable(complex_decision_agent, input_key="basic_info")
+    | search_chain
+)
+```
 
 #### 2.3.3 모듈 호환 레이어 (레거시 지원)
-- **Company_Data_3의 모듈을 Agent Tool로 변환**
-- MainController 로직을 Main Agent로 통합
-- 기존 모듈을 Tool로 래핑하여 호환성 유지
+- **Company_Data_3의 모듈을 Runnable로 변환**
+- 기존 모듈을 LCEL 체인에서 사용 가능하도록 어댑터 제공
+
+### 2.4 마이그레이션 전략
+
+#### 2.4.1 Company_Data Chain → LCEL 변환
+
+**기존 Chain 코드**:
+```python
+# Company_Data 방식
+chain = LLMChain(llm=llm, prompt=prompt)
+result = chain.invoke({"input": data})
+```
+
+**LCEL 변환**:
+```python
+# LCEL 방식
+chain = prompt | llm | parser
+result = chain.invoke({"input": data})
+```
+
+**변환 장점**:
+- ✅ 코드가 더 간결하고 읽기 쉬움
+- ✅ 스트리밍 지원 (`chain.stream()`)
+- ✅ 비동기 지원 (`chain.ainvoke()`)
+- ✅ 병렬 실행 용이 (`RunnableParallel`)
+
+#### 2.4.2 Company_Data_5 Agent → LCEL 통합
+
+**Agent를 Runnable로 변환**:
+```python
+# Agent를 LCEL 체인에서 사용
+class AgentRunnable:
+    def __init__(self, agent):
+        self.agent = agent
+    
+    def invoke(self, input_data):
+        return self.agent.invoke(input_data)
+    
+    def stream(self, input_data):
+        return self.agent.stream(input_data)
+
+# 사용 예시
+agent_runnable = AgentRunnable(complex_agent)
+chain = prompt | agent_runnable | parser
+```
+
+#### 2.4.3 Company_Data_3 모듈 → Runnable 변환
+
+**모듈을 Runnable로 변환**:
+```python
+from langchain_core.runnables import RunnableLambda
+
+# 모듈을 Runnable로 래핑
+def module_as_runnable(module):
+    def run_module(data):
+        return module.process(data)
+    return RunnableLambda(run_module)
+
+# LCEL 체인에 통합
+chain = (
+    prepare_input
+    | module_as_runnable(company_info_module)
+    | next_chain
+)
+```
 
 ---
 
@@ -123,17 +437,41 @@ Search Agent - WEB (SAW) 확장
 
 #### 통합 방안
 ```
-LLM 통합 레이어
-├── 기본: OpenAI Function-calling (Company_Data_5)
-├── 호환 레이어: LangChain Chain → Agent 변환
+LLM 통합 레이어 (LCEL 기반)
+├── 기본: LangChain LCEL (Runnable 파이프라인)
+├── LLM: ChatOpenAI, ChatAnthropic 등 (모두 Runnable)
+├── Function-calling: Agent 필요시 사용 (Runnable로 통합)
 └── 설정: LLM_PROVIDER 환경변수로 선택 가능
 ```
 
 **구현 계획**:
-1. 기본은 OpenAI Function-calling 사용
-2. LangChain Chain을 Agent로 래핑하는 어댑터 제공
-3. 필요시 LangChain 기반 Agent도 지원하도록 확장 가능한 구조
-4. 프롬프트 관리 통합: Company_Data의 prompts/ 폴더 구조를 Agent별로 재구성
+1. **기본은 LCEL 사용**: 모든 LLM 호출을 LCEL 체인으로 구성
+   ```python
+   from langchain_openai import ChatOpenAI
+   from langchain_core.prompts import ChatPromptTemplate
+   
+   llm = ChatOpenAI(model="gpt-4o-mini")
+   prompt = ChatPromptTemplate.from_template("...")
+   chain = prompt | llm | parser
+   ```
+
+2. **Function-calling 필요시**: Agent를 Runnable로 래핑하여 LCEL 체인에 통합
+   ```python
+   # Function-calling이 필요한 경우
+   agent = create_openai_tools_agent(llm, tools, prompt)
+   agent_runnable = AgentRunnable(agent)
+   chain = prepare_input | agent_runnable | process_result
+   ```
+
+3. **프롬프트 관리**: Company_Data의 prompts/ 폴더 구조를 LCEL 체인별로 재구성
+   - 각 체인별로 프롬프트 파일 분리
+   - ChatPromptTemplate으로 표준화
+
+4. **스트리밍 지원**: LCEL의 기본 기능 활용
+   ```python
+   for chunk in chain.stream(input_data):
+       print(chunk)  # 실시간 결과 출력
+   ```
 
 ### 3.4 보고서 생성 통합
 
@@ -274,51 +612,169 @@ output/
 3. 문서화 완료
 4. 마이그레이션 가이드 작성
 
-### 5.2 코드 통합 방법
+### 5.2 코드 통합 방법 (LCEL 기반 + DI)
 
-#### 5.2.1 Agent로 변환 (Company_Data Chain)
+#### 5.2.1 Company_Data Chain → LCEL 변환 (DI 적용)
 ```python
-# Company_Data의 Chain을 Agent Tool로 변환
-class ChainAdapterTool(BaseTool):
-    """LangChain Chain을 Agent Tool로 변환"""
-    def __init__(self, chain):
-        self.chain = chain
+# 기존 Company_Data Chain
+from langchain.chains import LLMChain
+
+old_chain = LLMChain(
+    llm=llm,
+    prompt=prompt,
+    output_parser=parser
+)
+
+# LCEL 변환 + DI 적용
+from langchain_core.runnables import RunnableLambda
+from dependency_injector.wiring import inject, Provide
+
+class BasicInfoChain:
+    """기초 정보 수집 체인 (DI 사용)"""
     
-    def execute(self, input_data):
-        return self.chain.invoke(input_data)
+    @inject
+    def __init__(
+        self,
+        llm = Provide["llm_provider"],
+        prompt = Provide["basic_info_prompt"],
+        parser = Provide["basic_info_parser"],
+    ):
+        self.llm = llm
+        self.prompt = prompt
+        self.parser = parser
+        self._chain = None
+    
+    @property
+    def chain(self):
+        """LCEL 체인 생성"""
+        if self._chain is None:
+            self._chain = self.prompt | self.llm | self.parser
+        return self._chain
+    
+    def invoke(self, data):
+        return self.chain.invoke(data)
+    
+    def stream(self, data):
+        return self.chain.stream(data)
+
+# 사용 (DI 컨테이너에서 주입)
+@inject
+def use_chain(chain: BasicInfoChain = Provide["basic_info_chain"]):
+    result = chain.invoke({"input": data})
+    return result
 ```
 
-#### 5.2.2 모듈을 Tool로 변환 (Company_Data_3)
+#### 5.2.2 모듈을 Runnable로 변환 (Company_Data_3)
 ```python
-# Company_Data_3의 모듈을 Agent Tool로 변환
-class ModuleAdapterTool(BaseTool):
-    """모듈을 Agent Tool로 변환"""
-    def __init__(self, module):
-        self.module = module
-    
-    def execute(self, input_data):
-        return self.module.process(input_data)
+from langchain_core.runnables import RunnableLambda
+
+# Company_Data_3의 모듈을 Runnable로 변환
+def module_as_runnable(module):
+    """모듈을 LCEL Runnable로 변환"""
+    def process(data):
+        return module.process(data)
+    return RunnableLambda(process)
+
+# 사용 예시
+company_info_runnable = module_as_runnable(company_info_module)
+chain = prepare_input | company_info_runnable | next_step
 ```
 
-#### 5.2.3 기능 통합 예시: 검색 Agent
+#### 5.2.3 기능 통합 예시: 통합 검색 체인 (LCEL)
 ```python
-# 통합된 Search Agent
-class UnifiedSearchAgent(BaseAgent):
-    """통합 검색 Agent (DuckDuckGo + Tavily)"""
+from langchain_core.runnables import RunnableParallel, RunnableLambda
+from langchain_core.tools import Tool
+
+# 검색 도구들
+ddgs_tool = Tool.from_function(
+    func=duckduckgo_search,
+    name="duckduckgo_search",
+    description="DuckDuckGo 웹 검색"
+)
+
+tavily_tool = Tool.from_function(
+    func=tavily_search,
+    name="tavily_search",
+    description="Tavily 웹 검색 (유료, 고품질)"
+)
+
+# 통합 검색 체인 (병렬 실행)
+def route_search_engine(data):
+    """검색 엔진 자동 선택"""
+    engine = data.get("search_engine", "auto")
+    if engine == "tavily":
+        return tavily_tool
+    else:
+        return ddgs_tool
+
+unified_search_chain = (
+    RunnableLambda(route_search_engine)
+    | RunnableLambda(lambda tool: tool.invoke)
+)
+
+# 또는 병렬 실행 후 결과 통합
+parallel_search_chain = RunnableParallel({
+    "ddgs": RunnableLambda(lambda x: ddgs_tool.invoke(x["query"])),
+    "tavily": RunnableLambda(lambda x: tavily_tool.invoke(x["query"])),
+}) | RunnableLambda(merge_search_results)
+```
+
+#### 5.2.4 Agent를 LCEL에 통합 (DI 적용)
+```python
+from langchain_core.runnables import RunnableLambda
+from dependency_injector.wiring import inject, Provide
+
+# Agent를 Runnable로 래핑 (DI 사용)
+class BasicInfoAgent:
+    """기초 정보 수집 Agent (DI 사용)"""
     
-    def __init__(self):
-        self.ddgs_searcher = DuckDuckGoSearcher()
-        self.tavily_searcher = TavilySearcher()  # Company_Data에서 통합
+    @inject
+    def __init__(
+        self,
+        llm = Provide["llm_provider"],
+        tools = Provide["basic_info_tools"],
+        prompt = Provide["basic_info_agent_prompt"],
+    ):
+        self.llm = llm
+        self.tools = tools
+        self.prompt = prompt
+        self._executor = None
     
-    def search(self, query, engine="auto"):
-        if engine == "auto":
-            # 설정에 따라 자동 선택
-            engine = self.config.get_preferred_engine()
-        
-        if engine == "tavily":
-            return self.tavily_searcher.search(query)
-        else:
-            return self.ddgs_searcher.search(query)
+    @property
+    def executor(self):
+        """AgentExecutor 생성"""
+        if self._executor is None:
+            from langchain.agents import create_openai_tools_agent, AgentExecutor
+            agent = create_openai_tools_agent(
+                self.llm,
+                self.tools,
+                self.prompt
+            )
+            self._executor = AgentExecutor(
+                agent=agent,
+                tools=self.tools
+            )
+        return self._executor
+    
+    def invoke(self, input_data):
+        return self.executor.invoke(input_data)
+    
+    def stream(self, input_data):
+        return self.executor.stream(input_data)
+
+# LCEL 체인에 통합 (AgentExecutor는 이미 Runnable)
+@inject
+def create_pipeline(
+    basic_info_agent: BasicInfoAgent = Provide["basic_info_agent"],
+    search_chain = Provide["search_chain"],
+):
+    chain = (
+        RunnableLambda(prepare_input)
+        | basic_info_agent.executor  # AgentExecutor는 Runnable
+        | search_chain
+        | process_result
+    )
+    return chain
 ```
 
 ---
@@ -367,6 +823,7 @@ jinja2>=3.1.2
 pydantic>=2.5.0            # 데이터 검증
 python-dotenv>=1.0.0       # 환경변수
 pyyaml>=6.0.1              # 설정 파일
+dependency-injector>=4.41.0 # DI 패턴
 
 # 테스트
 pytest>=7.4.4
@@ -427,7 +884,51 @@ config/
 ├── search_policy.json         # 검색 정책 (Company_Data_5)
 ├── spa_strategy.json          # 전략 설정 (Company_Data_5)
 ├── logging.yaml               # 로깅 설정 (Company_Data_5)
+├── di_config.yaml             # DI 컨테이너 설정 (신규)
 └── chain_compatibility.json   # Chain 호환 설정 (신규)
+```
+
+### 7.3 DI 설정 파일 (di_config.yaml)
+
+```yaml
+# config/di_config.yaml
+llm:
+  model: "gpt-4o-mini"
+  temperature: 0
+  provider: "openai"
+
+rag:
+  vector_store_path: "data/vector_db"
+  embedding_model: "text-embedding-3-small"
+  chunk_size: 1000
+  chunk_overlap: 200
+
+search:
+  engine: "ddgs"  # ddgs, tavily, auto
+  max_results: 10
+  timeout: 30
+
+tools:
+  dart:
+    api_key: "${DART_API_KEY}"
+    timeout: 30
+  tavily:
+    api_key: "${TAVILY_API_KEY}"
+    enabled: false
+
+agents:
+  basic_info:
+    max_iterations: 5
+    verbose: true
+  search:
+    max_iterations: 10
+    verbose: false
+
+chains:
+  basic_info:
+    save_intermediate: true
+  search:
+    parallel: true
 ```
 
 ---
@@ -501,30 +1002,40 @@ python scripts/migrate_results.py \
 ```
 unified_company_data/
 ├── src/
-│   ├── agents/                  # LLM Agents (Company_Data_5 기반)
-│   │   ├── main/
-│   │   ├── basic_info/
-│   │   ├── planner/
-│   │   ├── search/
-│   │   │   ├── search_rag_agent.py
-│   │   │   ├── search_web_agent.py
-│   │   │   └── search_tavily_agent.py  # 신규
-│   │   ├── insight/
-│   │   └── report/
+│   ├── chains/                  # LCEL 기반 체인 (기본)
+│   │   ├── basic_info/          # 기초 정보 수집 체인
+│   │   │   ├── __init__.py
+│   │   │   ├── basic_info_chain.py
+│   │   │   └── prompts.py
+│   │   ├── search/              # 검색 체인
+│   │   │   ├── __init__.py
+│   │   │   ├── rag_search_chain.py
+│   │   │   ├── web_search_chain.py
+│   │   │   ├── tavily_search_chain.py
+│   │   │   └── unified_search_chain.py
+│   │   ├── planner/             # 검색 전략 계획 체인
+│   │   ├── insight/             # 인사이트 생성 체인
+│   │   ├── report/              # 보고서 생성 체인
+│   │   └── pipeline/            # 전체 파이프라인
+│   │       └── main_pipeline.py
+│   ├── agents/                  # Agent (복잡한 로직용, 선택적)
+│   │   ├── complex_decision/   # 복잡한 의사결정 Agent
+│   │   └── workflow/            # 워크플로우 오케스트레이션
 │   ├── rag/                     # RAG 시스템 (Company_Data_5 기반)
-│   │   ├── etl/
-│   │   ├── routing/
-│   │   └── search/
-│   ├── chains/                  # Chain 호환 레이어 (Company_Data)
-│   │   └── adapters/
+│   │   ├── etl/                 # ETL 파이프라인
+│   │   ├── routing/             # 라우팅 엔진
+│   │   └── search/              # 검색 엔진 (Runnable로 통합)
+│   ├── tools/                   # Runnable Tool
+│   │   ├── dart_tools.py
+│   │   ├── search_tools.py
+│   │   └── rag_tools.py
 │   ├── modules/                 # 모듈 호환 레이어 (Company_Data_3)
-│   │   └── adapters/
-│   ├── registry/                # 에이전트 레지스트리 (Company_Data_5)
+│   │   └── adapters/            # Runnable 어댑터
 │   ├── shared/                  # 공통 모듈
-│   │   ├── core/
-│   │   ├── models/
-│   │   └── utils/
-│   └── config/                  # 설정 관리 (Company_Data_5 기반)
+│   │   ├── runnables/           # 공통 Runnable 컴포넌트
+│   │   ├── models/              # 데이터 모델
+│   │   └── utils/               # 유틸리티
+│   └── config/                  # 설정 관리
 │
 ├── config/                      # 설정 파일
 │   ├── rag_routing.json
@@ -548,17 +1059,19 @@ unified_company_data/
 │   ├── integration_guide.md     # 통합 가이드
 │   ├── migration_guide.md       # 마이그레이션 가이드
 │   ├── architecture.md          # 아키텍처 문서
+│   ├── lcel_guide.md            # LCEL 사용 가이드
 │   └── api_reference.md         # API 참조
 │
 ├── scripts/                     # 유틸리티 스크립트
 │   ├── migrate_vector_store.py
 │   ├── migrate_results.py
+│   ├── migrate_to_lcel.py        # LCEL 변환 스크립트
 │   └── validate_integration.py
 │
 ├── tests/                       # 통합 테스트
 │   ├── unit/
 │   ├── integration/
-│   └── agents/
+│   └── chains/                   # LCEL 체인 테스트
 │
 ├── main.py                      # 메인 진입점
 ├── env.user                     # 환경변수
@@ -570,12 +1083,37 @@ unified_company_data/
 
 ### 9.2 주요 변경사항 요약
 
-1. **아키텍처**: Agent 기반으로 통일 (Company_Data_5)
-2. **검색 엔진**: DuckDuckGo 기본, Tavily 옵션
-3. **RAG 시스템**: 이중 RAG (Notes + Slides) + 라우팅
-4. **로깅**: Structlog + Rich + LangSmith
-5. **설정 관리**: ConfigManager + JSON/YAML
-6. **출력 형식**: 통합 JSON + HTML, 단계별 저장 옵션
+1. **아키텍처**: **하이브리드 (LCEL + Agent) + DI 패턴**
+   - **LCEL 기반**: 파이프 연산자(`|`)로 직관적인 체인 구성
+   - **Agent 통합**: Tool calling이 필요한 경우 Agent 사용
+   - **DI 패턴**: dependency-injector로 의존성 관리
+   - Runnable 인터페이스로 모든 컴포넌트 통일
+   - 스트리밍 및 비동기 지원
+
+2. **DI 패턴 도입**:
+   - ✅ 의존성 관리 명확화
+   - ✅ 테스트 용이성 향상 (Mock 주입)
+   - ✅ 결합도 감소 (인터페이스 기반)
+   - ✅ 확장성 및 유지보수성 향상
+   - ✅ 설정 중앙화
+
+3. **검색 엔진**: DuckDuckGo 기본, Tavily 옵션 (병렬 실행 지원)
+
+4. **RAG 시스템**: 이중 RAG (Notes + Slides) + 라우팅 (Runnable로 통합)
+
+5. **로깅**: Structlog + Rich + LangSmith
+
+6. **설정 관리**: ConfigManager + JSON/YAML + DI 설정
+
+7. **출력 형식**: 통합 JSON + HTML, 단계별 저장 옵션
+
+8. **LCEL + DI 장점**:
+   - ✅ Company_Data의 기존 Chain 코드를 자연스럽게 통합
+   - ✅ LangChain 생태계와 완벽한 통합
+   - ✅ 간결하고 읽기 쉬운 코드
+   - ✅ 스트리밍 및 비동기 기본 지원
+   - ✅ 병렬 실행 용이 (`RunnableParallel`)
+   - ✅ 의존성 주입으로 테스트 및 확장 용이
 
 ---
 
@@ -656,14 +1194,599 @@ unified_company_data/
 
 ---
 
-## 13. 참고 자료
+## 13. DI 패턴 상세 가이드
 
-### 13.1 관련 문서
+### 13.1 DI 컨테이너 완전 예시
+
+```python
+# src/di/container.py
+from dependency_injector import containers, providers
+from langchain_openai import ChatOpenAI
+from langchain_core.prompts import ChatPromptTemplate
+from src.chains.basic_info.basic_info_chain import BasicInfoChain
+from src.agents.basic_info.basic_info_agent import BasicInfoAgent
+from src.tools.dart_tools import DartTool
+from src.rag.search.search_engine import RAGSearchEngine
+
+class Container(containers.DeclarativeContainer):
+    """DI 컨테이너"""
+    
+    # 설정
+    config = providers.Configuration()
+    
+    # LLM 프로바이더
+    llm_provider = providers.Factory(
+        ChatOpenAI,
+        model=config.llm.model,
+        temperature=config.llm.temperature,
+        api_key=config.llm.api_key,
+    )
+    
+    # 프롬프트
+    basic_info_prompt = providers.Singleton(
+        ChatPromptTemplate.from_template,
+        template="기업 {company_name}의 기본 정보를 수집해주세요.",
+    )
+    
+    # RAG 시스템
+    rag_retriever = providers.Singleton(
+        RAGSearchEngine,
+        vector_store_path=config.rag.vector_store_path,
+        embedding_model=config.rag.embedding_model,
+    )
+    
+    # Tools
+    dart_tool = providers.Factory(
+        DartTool,
+        api_key=config.tools.dart.api_key,
+    )
+    
+    # LCEL 체인
+    basic_info_chain = providers.Factory(
+        BasicInfoChain,
+        llm=llm_provider,
+        prompt=basic_info_prompt,
+    )
+    
+    # Agent
+    basic_info_agent = providers.Factory(
+        BasicInfoAgent,
+        llm=llm_provider,
+        tools=providers.List(
+            dart_tool,
+        ),
+        prompt=basic_info_prompt,
+    )
+    
+    # 파이프라인
+    main_pipeline = providers.Factory(
+        create_main_pipeline,
+        basic_info_chain=basic_info_chain,
+        basic_info_agent=basic_info_agent,
+    )
+```
+
+### 13.2 DI를 사용한 테스트
+
+```python
+# tests/unit/test_basic_info_chain.py
+from dependency_injector import containers, providers
+from unittest.mock import Mock
+
+def test_basic_info_chain():
+    # Mock 컨테이너 생성
+    container = containers.DynamicContainer()
+    
+    # Mock 의존성 주입
+    container.llm_provider = providers.Factory(Mock)
+    container.basic_info_prompt = providers.Singleton(Mock)
+    
+    # 테스트 대상 생성
+    chain = BasicInfoChain(
+        llm=container.llm_provider(),
+        prompt=container.basic_info_prompt(),
+    )
+    
+    # 테스트 실행
+    result = chain.invoke({"company_name": "테스트"})
+    assert result is not None
+```
+
+### 13.3 DI와 LCEL 통합 예시
+
+```python
+# src/chains/pipeline/main_pipeline.py
+from dependency_injector.wiring import inject, Provide
+from langchain_core.runnables import RunnableParallel, RunnableLambda
+
+class MainPipeline:
+    """메인 파이프라인 (DI 사용)"""
+    
+    @inject
+    def __init__(
+        self,
+        basic_info_chain = Provide["basic_info_chain"],
+        basic_info_agent = Provide["basic_info_agent"],
+        search_chain = Provide["search_chain"],
+        insight_chain = Provide["insight_chain"],
+        report_chain = Provide["report_chain"],
+    ):
+        self.basic_info_chain = basic_info_chain
+        self.basic_info_agent = basic_info_agent
+        self.search_chain = search_chain
+        self.insight_chain = insight_chain
+        self.report_chain = report_chain
+        self._pipeline = None
+    
+    @property
+    def pipeline(self):
+        """LCEL 파이프라인 생성"""
+        if self._pipeline is None:
+            self._pipeline = (
+                RunnableLambda(self._prepare_input)
+                | self.basic_info_chain.chain
+                | RunnableParallel({
+                    "search": self.search_chain.chain,
+                    "agent": self.basic_info_agent.executor,
+                })
+                | self.insight_chain.chain
+                | self.report_chain.chain
+            )
+        return self._pipeline
+    
+    def invoke(self, company_name: str):
+        return self.pipeline.invoke(company_name)
+    
+    def _prepare_input(self, company_name: str):
+        return {"company_name": company_name}
+```
+
+### 13.4 DI의 장점 요약
+
+1. **의존성 명시**: 모든 의존성이 명확히 정의됨
+2. **테스트 용이**: Mock 객체 주입으로 단위 테스트 용이
+3. **결합도 감소**: 인터페이스 기반으로 모듈 간 결합도 감소
+4. **확장성**: 새로운 구현체 추가 시 기존 코드 수정 최소화
+5. **설정 중앙화**: 의존성 설정을 한 곳에서 관리
+6. **생명주기 관리**: Singleton, Factory 등으로 객체 생명주기 관리
+
+---
+
+## 14. LCEL 상세 가이드
+
+### 13.1 LCEL 기본 개념
+
+**LangChain Expression Language (LCEL)**는 LangChain의 최신 방식으로, Runnable 인터페이스를 사용하여 체인을 구성합니다.
+
+#### 핵심 개념
+- **Runnable**: 모든 LCEL 컴포넌트는 Runnable 인터페이스를 구현
+- **파이프 연산자 (`|`)**: 체인을 직관적으로 구성
+- **타입 안정성**: 입력/출력 타입이 명확히 정의됨
+
+### 13.2 LCEL 기본 사용법
+
+#### 13.2.1 기본 체인 구성
+```python
+from langchain_core.prompts import ChatPromptTemplate
+from langchain_openai import ChatOpenAI
+from langchain_core.output_parsers import StrOutputParser
+
+# 프롬프트
+prompt = ChatPromptTemplate.from_template(
+    "기업 {company_name}에 대해 분석해주세요."
+)
+
+# LLM
+llm = ChatOpenAI(model="gpt-4o-mini", temperature=0)
+
+# 파서
+parser = StrOutputParser()
+
+# 체인 구성 (파이프 연산자 사용)
+chain = prompt | llm | parser
+
+# 실행
+result = chain.invoke({"company_name": "삼성전자"})
+```
+
+#### 13.2.2 병렬 실행
+```python
+from langchain_core.runnables import RunnableParallel
+
+# 여러 체인을 병렬로 실행
+parallel_chain = RunnableParallel({
+    "basic_info": basic_info_chain,
+    "search_results": search_chain,
+    "rag_results": rag_chain,
+})
+
+# 실행 (모든 체인이 동시에 실행됨)
+results = parallel_chain.invoke({"company_name": "삼성전자"})
+# 결과: {"basic_info": ..., "search_results": ..., "rag_results": ...}
+```
+
+#### 13.2.3 조건부 분기
+```python
+from langchain_core.runnables import RunnableLambda
+
+def route_input(data):
+    """입력에 따라 다른 체인 선택"""
+    if data.get("use_rag"):
+        return rag_chain
+    else:
+        return web_search_chain
+
+routing_chain = RunnableLambda(route_input)
+
+# 사용
+result = routing_chain.invoke({"use_rag": True, "query": "..."})
+```
+
+#### 13.2.4 스트리밍
+```python
+# 실시간 결과 스트리밍
+for chunk in chain.stream({"company_name": "삼성전자"}):
+    print(chunk, end="", flush=True)
+```
+
+#### 13.2.5 비동기 실행
+```python
+import asyncio
+
+# 비동기 실행
+result = await chain.ainvoke({"company_name": "삼성전자"})
+
+# 비동기 스트리밍
+async for chunk in chain.astream({"company_name": "삼성전자"}):
+    print(chunk)
+```
+
+### 13.3 실제 통합 예시: 5단계 파이프라인
+
+```python
+from langchain_core.runnables import (
+    RunnableParallel,
+    RunnableLambda,
+    RunnablePassthrough
+)
+from langchain_core.prompts import ChatPromptTemplate
+from langchain_openai import ChatOpenAI
+from langchain_core.output_parsers import StrOutputParser
+import json
+
+# LLM 및 기본 설정
+llm = ChatOpenAI(model="gpt-4o-mini", temperature=0)
+parser = StrOutputParser()
+
+# 1단계: 기초 정보 수집
+basic_info_prompt = ChatPromptTemplate.from_template("""
+기업 {company_name}의 기본 정보를 수집해주세요.
+출력은 JSON 형식으로 제공해주세요.
+""")
+
+basic_info_chain = (
+    basic_info_prompt
+    | llm
+    | parser
+    | RunnableLambda(lambda x: json.loads(x))
+)
+
+# 2단계: 검색 전략 계획
+search_plan_prompt = ChatPromptTemplate.from_template("""
+기업 정보: {basic_info}
+이 기업에 대한 검색 전략을 수립해주세요.
+""")
+
+search_plan_chain = (
+    search_plan_prompt
+    | llm
+    | parser
+)
+
+# 3단계: 병렬 검색 (RAG + 웹)
+def create_rag_chain(retriever):
+    rag_prompt = ChatPromptTemplate.from_messages([
+        ("system", "다음 컨텍스트를 바탕으로 질문에 답변해주세요."),
+        ("human", "컨텍스트: {context}\n\n질문: {question}")
+    ])
+    
+    def format_docs(docs):
+        return "\n\n".join(doc.page_content for doc in docs)
+    
+    return (
+        {"context": retriever | format_docs, "question": RunnablePassthrough()}
+        | rag_prompt
+        | llm
+        | parser
+    )
+
+rag_chain = create_rag_chain(rag_retriever)
+web_search_chain = RunnableLambda(web_search_tool.invoke)
+
+search_chain = RunnableParallel({
+    "rag": rag_chain,
+    "web": web_search_chain,
+})
+
+# 4단계: 인사이트 생성
+insight_prompt = ChatPromptTemplate.from_template("""
+기업 정보: {basic_info}
+검색 결과: {search_results}
+위 정보를 바탕으로 인사이트를 생성해주세요.
+""")
+
+insight_chain = (
+    insight_prompt
+    | llm
+    | parser
+)
+
+# 5단계: 보고서 생성
+report_prompt = ChatPromptTemplate.from_template("""
+기업 정보: {basic_info}
+인사이트: {insight}
+위 정보를 바탕으로 HTML 보고서를 생성해주세요.
+""")
+
+report_chain = (
+    report_prompt
+    | llm
+    | parser
+)
+
+# 전체 파이프라인
+def save_stage(stage_name):
+    """단계별 저장 함수"""
+    def save(data):
+        filename = f"output/json/{stage_name}_{data.get('company_name')}.json"
+        with open(filename, 'w', encoding='utf-8') as f:
+            json.dump(data, f, ensure_ascii=False, indent=2)
+        return data
+    return RunnableLambda(save)
+
+pipeline = (
+    RunnableLambda(lambda x: {"company_name": x})
+    | {
+        "basic_info": basic_info_chain,
+        "company_name": RunnablePassthrough(),
+    }
+    | save_stage("stage1")
+    | {
+        "search_plan": search_plan_chain,
+        "basic_info": RunnablePassthrough(),
+        "company_name": RunnablePassthrough(),
+    }
+    | save_stage("stage2")
+    | {
+        "search_results": search_chain,
+        "basic_info": RunnablePassthrough(),
+        "company_name": RunnablePassthrough(),
+    }
+    | save_stage("stage3")
+    | {
+        "insight": insight_chain,
+        "basic_info": RunnablePassthrough(),
+        "search_results": RunnablePassthrough(),
+        "company_name": RunnablePassthrough(),
+    }
+    | save_stage("stage4")
+    | {
+        "report": report_chain,
+        "basic_info": RunnablePassthrough(),
+        "insight": RunnablePassthrough(),
+        "company_name": RunnablePassthrough(),
+    }
+    | save_stage("final")
+)
+
+# 실행
+result = pipeline.invoke("삼성전자")
+```
+
+### 13.4 Agent와 Tool Calling을 LCEL에서 사용하기
+
+**중요**: LCEL에서 Agent와 Tool calling을 완벽하게 지원합니다!
+
+#### 13.4.1 AgentExecutor는 이미 Runnable
+
+`AgentExecutor`는 이미 `Runnable` 인터페이스를 구현하므로, **별도 래핑 없이 LCEL 체인에 직접 사용 가능**합니다.
+
+```python
+from langchain.agents import create_openai_tools_agent, AgentExecutor
+from langchain_core.tools import tool
+from langchain_core.prompts import ChatPromptTemplate
+from langchain_openai import ChatOpenAI
+
+# 1. Tool 정의
+@tool
+def search_company_info(company_name: str) -> str:
+    """기업 정보를 검색합니다."""
+    # 실제 검색 로직
+    return f"{company_name}의 정보"
+
+@tool
+def get_dart_info(corp_code: str) -> str:
+    """DART에서 기업 공시 정보를 조회합니다."""
+    # 실제 DART 조회 로직
+    return f"{corp_code}의 공시 정보"
+
+tools = [search_company_info, get_dart_info]
+
+# 2. Agent 생성
+prompt = ChatPromptTemplate.from_messages([
+    ("system", "당신은 기업 정보 수집 전문가입니다."),
+    ("human", "{input}"),
+    ("placeholder", "{agent_scratchpad}"),
+])
+
+llm = ChatOpenAI(model="gpt-4o-mini")
+agent = create_openai_tools_agent(llm, tools, prompt)
+agent_executor = AgentExecutor(agent=agent, tools=tools)
+
+# 3. LCEL 체인에 직접 사용 (AgentExecutor는 이미 Runnable!)
+chain = (
+    RunnableLambda(lambda x: {"input": x})
+    | agent_executor  # 직접 사용 가능!
+    | RunnableLambda(lambda x: x["output"])
+)
+
+# 실행
+result = chain.invoke("삼성전자 정보를 수집해주세요")
+```
+
+#### 13.4.2 Tool Calling이 포함된 Agent 파이프라인
+
+```python
+from langchain_core.runnables import RunnableParallel, RunnableLambda
+
+# 여러 Agent를 병렬로 실행
+parallel_agents = RunnableParallel({
+    "basic_info": basic_info_agent_executor,  # Tool calling 포함
+    "search": search_agent_executor,          # Tool calling 포함
+    "analysis": analysis_agent_executor,      # Tool calling 포함
+})
+
+# LCEL 파이프라인에 통합
+pipeline = (
+    prepare_input
+    | parallel_agents
+    | combine_results
+    | final_report_chain
+)
+```
+
+#### 13.4.3 Agent와 일반 LCEL 체인 혼합
+
+```python
+# Agent (Tool calling 사용) + 일반 LCEL 체인
+pipeline = (
+    prepare_input
+    | basic_info_agent_executor  # Agent (Tool calling)
+    | {
+        "rag_results": rag_chain,           # 일반 LCEL 체인
+        "web_results": web_search_chain,    # 일반 LCEL 체인
+        "basic_info": RunnablePassthrough(), # Agent 결과 전달
+    }
+    | insight_agent_executor  # Agent (Tool calling)
+    | report_chain            # 일반 LCEL 체인
+)
+```
+
+#### 13.4.4 Tool을 LCEL 체인에서 직접 사용
+
+Tool도 Runnable이므로 LCEL 체인에 직접 사용 가능:
+
+```python
+from langchain_core.tools import tool
+from langchain_core.runnables import RunnableLambda
+
+@tool
+def search_tool(query: str) -> str:
+    """검색 도구"""
+    return search(query)
+
+# Tool을 LCEL 체인에 직접 사용
+chain = (
+    RunnableLambda(lambda x: {"query": x})
+    | RunnableLambda(lambda x: search_tool.invoke(x["query"]))
+    | process_result
+)
+
+# 또는 더 간단하게
+chain = RunnableLambda(lambda x: search_tool.invoke(x)) | process_result
+```
+
+#### 13.4.5 실제 통합 예시: Tool Calling Agent
+
+```python
+from langchain.agents import create_openai_tools_agent, AgentExecutor
+from langchain_core.tools import tool
+from langchain_core.prompts import ChatPromptTemplate
+from langchain_openai import ChatOpenAI
+from langchain_core.runnables import RunnableParallel, RunnableLambda
+
+# Tools 정의
+@tool
+def corp_code_search(company_name: str) -> dict:
+    """기업명으로 고유번호를 검색합니다."""
+    # 실제 검색 로직
+    return {"corp_code": "123456", "company_name": company_name}
+
+@tool
+def dart_basic_info(corp_code: str) -> dict:
+    """DART에서 기업 기본 정보를 조회합니다."""
+    # 실제 DART 조회 로직
+    return {"info": "기업 정보"}
+
+@tool
+def rag_search(query: str) -> str:
+    """RAG 시스템에서 정보를 검색합니다."""
+    # 실제 RAG 검색 로직
+    return "RAG 검색 결과"
+
+tools = [corp_code_search, dart_basic_info, rag_search]
+
+# Agent 생성
+prompt = ChatPromptTemplate.from_messages([
+    ("system", "기업 정보를 수집하는 전문가입니다. 필요한 도구를 사용하세요."),
+    ("human", "{input}"),
+    ("placeholder", "{agent_scratchpad}"),
+])
+
+llm = ChatOpenAI(model="gpt-4o-mini")
+agent = create_openai_tools_agent(llm, tools, prompt)
+agent_executor = AgentExecutor(agent=agent, tools=tools)
+
+# LCEL 파이프라인 구성
+pipeline = (
+    RunnableLambda(lambda x: {"input": f"기업 {x}의 정보를 수집해주세요"})
+    | agent_executor  # Tool calling Agent 직접 사용
+    | RunnableLambda(lambda x: x["output"])
+    | save_result
+)
+
+# 실행
+result = pipeline.invoke("삼성전자")
+```
+
+#### 13.4.6 요약
+
+✅ **LCEL에서 Agent와 Tool calling 완벽 지원**
+- `AgentExecutor`는 이미 `Runnable`이므로 LCEL 체인에 직접 사용 가능
+- Tool도 Runnable이므로 LCEL 체인에 직접 사용 가능
+- Agent와 일반 LCEL 체인을 자유롭게 혼합 가능
+- Tool calling이 포함된 Agent를 파이프라인에 자연스럽게 통합 가능
+
+**핵심 포인트**:
+- AgentExecutor = Runnable (별도 래핑 불필요)
+- Tool = Runnable (직접 사용 가능)
+- LCEL 파이프라인에서 Agent와 Tool calling을 완전히 활용 가능
+
+### 13.5 LCEL의 장점 요약
+
+1. **간결한 코드**: 파이프 연산자로 직관적인 체인 구성
+2. **타입 안정성**: 입력/출력 타입이 명확
+3. **스트리밍**: 실시간 결과 제공
+4. **비동기 지원**: `ainvoke()`, `astream()` 사용
+5. **병렬 실행**: `RunnableParallel`로 성능 최적화
+6. **LangChain 통합**: 모든 LangChain 컴포넌트와 자연스럽게 통합
+7. **디버깅 용이**: 각 단계별 입력/출력 추적 가능
+
+---
+
+## 14. 참고 자료
+
+### 14.1 관련 문서
 - `폴더_분석_결과.md`: 세 프로젝트 상세 분석
 - Company_Data_5/docs/: Phase별 설계 문서
 - Company_Data/docs/specs/: 요구사항 및 설계 문서
 
-### 13.2 주요 파일 위치
+### 14.2 LangChain LCEL 공식 문서
+- [LangChain LCEL 공식 문서](https://python.langchain.com/docs/concepts/lcel/)
+- [Runnable 인터페이스](https://python.langchain.com/docs/concepts/#runnables)
+- [LCEL 예제](https://python.langchain.com/docs/expression_language/)
+
+### 14.3 주요 파일 위치
 - **Company_Data**: `src/company_info_collector.py`, `src/llm/chains/`
 - **Company_Data_3**: `modules/main_controller.py`, `modules/`
 - **Company_Data_5**: `src/agents/`, `src/rag/`, `src/registry/`
@@ -672,6 +1795,6 @@ unified_company_data/
 
 **작성일**: 2025-01-XX  
 **작성자**: AI Assistant  
-**버전**: 1.0  
-**상태**: 초안
+**버전**: 2.0 (LCEL 기반으로 업데이트)  
+**상태**: LCEL 통합 방안 포함
 
